--- a/qt5/gui_elements/mainUI.ui
+++ b/qt5/gui_elements/mainUI.ui
@@ -135,6 +135,11 @@
            <property name="contextMenuPolicy">
             <enum>Qt::NoContextMenu</enum>
            </property>
+           <item>
+            <property name="text">
+             <string>Blender</string>
+            </property>
+           </item>
           </widget>
          </item>
          <item>
@@ -303,7 +308,7 @@
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
-          <widget class="QLineEdit" name="lineEdit">
+          <widget class="QLineEdit" name="search_line_input">
            <property name="sizePolicy">
             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -325,7 +330,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="search_button">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -352,7 +357,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Topic1</string>
+            <string>Blender</string>
            </property>
           </widget>
          </item>
@@ -365,7 +370,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Topic2</string>
+            <string>Unity</string>
            </property>
           </widget>
          </item>
@@ -378,12 +383,15 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Topic3</string>
+            <string>Unreal</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="topic4">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -397,6 +405,9 @@
          </item>
          <item>
           <widget class="QCheckBox" name="topic5">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -410,6 +421,9 @@
          </item>
          <item>
           <widget class="QCheckBox" name="topic6">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -447,6 +461,11 @@
            <property name="contextMenuPolicy">
             <enum>Qt::NoContextMenu</enum>
            </property>
+           <item>
+            <property name="text">
+             <string>None</string>
+            </property>
+           </item>
           </widget>
          </item>
          <item>
