--- a/qt5/gui_elements/mainUI.ui
+++ b/qt5/gui_elements/mainUI.ui
@@ -111,7 +111,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QScrollArea" name="topic_scroll_area">
+          <widget class="QScrollArea" name="exclude_sheets">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>8</horstretch>
@@ -447,6 +447,12 @@
        <layout class="QHBoxLayout" name="horizontalLayout_6">
         <item>
          <widget class="QLabel" name="log_text">
+          <property name="maximumSize">
+           <size>
+            <width>700</width>
+            <height>60</height>
+           </size>
+          </property>
           <property name="text">
            <string/>
           </property>
