--- a/qt5/gui_elements/addUIVertical.ui
+++ b/qt5/gui_elements/addUIVertical.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>651</height>
+    <width>784</width>
+    <height>669</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -60,10 +60,16 @@
    </item>
    <item>
     <widget class="QTextEdit" name="code">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>130</height>
+      </size>
+     </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
-       <height>100</height>
+       <height>200</height>
       </size>
      </property>
     </widget>
@@ -91,7 +97,7 @@
    <item>
     <widget class="QTextEdit" name="quick_text">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -99,7 +105,7 @@
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>250</height>
+       <height>200</height>
       </size>
      </property>
      <property name="autoFormatting">
