--- a/qt5/gui_elements/assetResultsDialog.ui
+++ b/qt5/gui_elements/assetResultsDialog.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Assets</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <widget class="QScrollArea" name="results_box">
@@ -38,7 +41,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
