Add UE Project scanning

--- a/qt5/gui_elements/mainUI.ui
+++ b/qt5/gui_elements/mainUI.ui
@@ -62,6 +62,13 @@
        </spacer>
       </item>
       <item>
+       <widget class="QPushButton" name="scan_ue">
+        <property name="text">
+         <string>Scan UE Projects</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="refresh">
         <property name="text">
          <string>Refresh Cache</string>
