--- a/qt5/gui_elements/projectOption.ui
+++ b/qt5/gui_elements/projectOption.ui
@@ -39,13 +39,13 @@
        <number>3</number>
       </property>
       <property name="leftMargin">
-       <number>2</number>
+       <number>9</number>
       </property>
       <property name="topMargin">
        <number>0</number>
       </property>
       <property name="rightMargin">
-       <number>2</number>
+       <number>9</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
@@ -81,23 +81,10 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QLabel" name="project_name">
+          <widget class="QCheckBox" name="checked">
            <property name="maximumSize">
             <size>
-             <width>16777215</width>
-             <height>30</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Goblin wars</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="select_project">
-           <property name="maximumSize">
-            <size>
-             <width>60</width>
+             <width>30</width>
              <height>16777215</height>
             </size>
            </property>
@@ -105,13 +92,23 @@
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
            <property name="text">
-            <string>select</string>
+            <string/>
            </property>
-           <property name="checkable">
-            <bool>true</bool>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="project_name">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
            </property>
-           <property name="autoExclusive">
-            <bool>false</bool>
+           <property name="styleSheet">
+            <string notr="true">font-weight:bold;</string>
+           </property>
+           <property name="text">
+            <string/>
            </property>
           </widget>
          </item>
@@ -133,7 +130,7 @@
          </size>
         </property>
         <property name="text">
-         <string>C:/Program filse/Golbins/Goblin wars</string>
+         <string/>
         </property>
        </widget>
       </item>
