--- a/qt5/gui_elements/assetResultWidget.ui
+++ b/qt5/gui_elements/assetResultWidget.ui
@@ -51,7 +51,8 @@
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
-      <string notr="true">font-size:16px;</string>
+      <string notr="true">font-size:16px;
+font-weight:bold;</string>
      </property>
      <property name="text">
       <string/>
