--- a/qt5/gui_elements/settUI.ui
+++ b/qt5/gui_elements/settUI.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string>Settings</string>
   </property>
+  <property name="accessibleName">
+   <string>settings_dialog</string>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <widget class="QTabWidget" name="tabWidget">
