--- a/qt5/gui_elements/addNewAsset.ui
+++ b/qt5/gui_elements/addNewAsset.ui
@@ -255,6 +255,25 @@
         </widget>
        </item>
        <item>
+        <widget class="QListWidget" name="thumbnail_view">
+         <property name="flow">
+          <enum>QListView::LeftToRight</enum>
+         </property>
+         <property name="isWrapping" stdset="0">
+          <bool>false</bool>
+         </property>
+         <property name="viewMode">
+          <enum>QListView::IconMode</enum>
+         </property>
+         <property name="wordWrap">
+          <bool>false</bool>
+         </property>
+         <property name="itemAlignment">
+          <set>Qt::AlignTop</set>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
