--- a/qt5/gui_elements/downloadAsset.ui
+++ b/qt5/gui_elements/downloadAsset.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>414</width>
-    <height>701</height>
+    <height>625</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="cursor">
    <cursorShape>ArrowCursor</cursorShape>
@@ -19,6 +25,9 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>10</number>
+   </property>
+   <property name="sizeConstraint">
+    <enum>QLayout::SetFixedSize</enum>
    </property>
    <property name="topMargin">
     <number>9</number>
@@ -120,6 +129,9 @@ font-size:16px;</string>
       </item>
       <item>
        <widget class="QScrollArea" name="scroll">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>0</width>
@@ -159,6 +171,13 @@ font-size:16px;</string>
           </property>
          </layout>
         </widget>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="show_hide_button">
+        <property name="text">
+         <string>Hide</string>
+        </property>
        </widget>
       </item>
      </layout>
